# Sprintly

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  codecov.yml  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Cargo.toml
apps/api/.sqlx/: query-01ae01c2f125d1993dabd64dc0fe80e11eb246498d5cb632b3301c6ad41daa8b.json  query-02fff52f99c76ba27bd2efa41101945655476f1262726199360fe5d28e1352a5.json  query-0598ce9c38de114b3a2cd699af4b0965ecbb55234f31fb2c6089472719682162.json  query-05ee06194397d87856e9739987e259acfd6fd6252151a5ac862c0ea8c646c626.json  query-0604aef4e3a3d64494caf883f095392bb0818d9bf19fcd5ee8fab20aa893443c.json  query-114c7375ec5687983de2f9cd7ec15a2b619a26273cd885807132ec02b9ef3b82.json  query-11f7c6f71759d8601b09c06ac917e240e4b7fcb84d7089dfa8f1766177f0d866.json  query-13871e17decafb6106e5d7d2b80d37b1b51ca67ec9744bdb0515fd68f20afd47.json  query-178a6a3cd89ea20f8b1b19501afc613ef1753f6e4ecade6c9821718b89038395.json  query-183c617a58f56405eb32c8a0024374593644a140fe1a31368b4d4f3fb51d442c.json  query-18c1522878abcc9ee7d167632857c085587d52ef4f9e1f367a13c82b22ed969b.json  query-1934d40714fb48982ef78245aa8df7eee996e7eaed0007925620c06bf84561df.json  query-19f749e718e4aa52087b0c577935cfa447372dcdb733ead2c18bdb6536944569.json  query-20e1c756746e9021e29327a877c1d2e9e982c4ecd9637805934b6b91e17357d3.json  query-239ccf45a0b4b0c976a17aba097d3cb0fb6235e94ab6ad40214b4289bd262629.json  query-23c8fa3b95e1a4350a76c42d779d6228314cd929b2c0db6dda83a1b7e293f717.json  query-23f9ad730b0ff9ed29a970d726c842329a9459d1f0c01255b9e3f41fe23540a3.json  query-2516dff114648db956cf5e3da001c732014386902b6de91f24cae451e0a6a7bb.json  query-29df180bbe9e5be9777e253e2797304d21401f5984f80413dc3f765a9c055676.json  query-2a73ca85affda549d3efa31a60daefa4a9dd300a3c0389525ec3b0541d4baf7a.json  query-2d4aa20d16eab6a7a19e9daad202a4f8b29d7bd2e9145ad3544742fce54e10a2.json  query-2dd0acb4f28fbf7f43dbb58410c5f06e47922f4a54d236bfe8a597c1b987ba3e.json  query-2fb880b646bb3126f6ddaff01bee25c7d46a93561265cf6bf20c2267b445c633.json  query-34592ebe1d9fd8b3fad17e934d192de90eb79fcaaa3d4015ae79e130bf17017a.json  query-35176a3c10c49a4727e4aa07bbb7abc5f7b16fc06a7f2b01e2d9a0addfc20677.json  query-374cf28f5179b95625752dc9098c8bdfc7fd10bc27c11fd72e782afea443b873.json  query-3875c039232628fd31c8c63095e7b69b8b1e33a2ff7f27b0eb79ab826a2f7ff9.json  query-394e0777640bc59785d9734fc0595a3363a607beef498aef37f225c10afb9d59.json  query-3ce4c8252f331e98eb62755c890774b91d054453fa94a120b81a8c27b796c153.json  query-404300809cefbc4189b5f83730ee52946bafac3785c7567d67c41da15b3f811f.json  query-43b8ef2bf392f41ab317fb8a85627ccb851d704b44a92998a244b1e2fd01bea4.json  query-459a60352594cc11f51d99f33969a860b2bbe7f786c97ca1ac9b95bbe884980c.json  query-4653422d205c4143f722ebdcd563dd1b02b74915bcf2d5b865e1644e4e7a6f95.json  query-466d296dc327cb36b1ac2d800db063cce6fe751ecf6eded4319f07d004dc5673.json  query-470253a2a692ac5f948d1d293671a07fd686ab62d60d297e7fd9a4b21ac97801.json  query-4936bed290e965099c5f209b513047087d1394cda7e6f20bacbf39a036d51a9a.json  query-4b00f7803bd3ca9e3a8a489f48101df1860fc2631df9a5a5c2ed26b5927d265f.json  query-4fbb9c4be3cfdc09231e0735251260e12ebcfa337fe9f20f2b791b08827483d7.json  query-4fd3a41c0c1804ae923e8ebf7153305d05525c454115c0f8626571c083e532bf.json  query-5604ff09d4d207f5b1b49201d8a351943d14a1da21d36d9e4ba439d4f4a00aa9.json  (+88 more)
apps/api/migrations/: 20260527000000_init.down.sql  20260527000000_init.up.sql  20260527010000_auth.down.sql  20260527010000_auth.up.sql  20260527020000_projects.down.sql  20260527020000_projects.up.sql  20260527030000_tasks.down.sql  20260527030000_tasks.up.sql  20260527040000_comments_attachments.down.sql  20260527040000_comments_attachments.up.sql  20260527050000_time_tracking.down.sql  20260527050000_time_tracking.up.sql  20260527060000_sprints.down.sql  20260527060000_sprints.up.sql  20260527070000_vault.down.sql  20260527070000_vault.up.sql  20260527080000_payroll.down.sql  20260527080000_payroll.up.sql  20260527090000_achievements.up.sql  (+34 more)
apps/api/src/: app.rs  (+5 more)
(+275 files in other folders)
