[workspace]
resolver = "2"
members = [
    "apps/api",
]

[workspace.package]
edition = "2021"
# 1.88 floor — locked transitive crates require it (e.g. time ≥0.3.47 needs
# rustc 1.88; icu/idna need 1.86). Docker and CI build on 1.88 to match.
rust-version = "1.88"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web
axum = { version = "0.7", features = ["macros", "ws", "tracing"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "request-id", "set-header", "limit", "timeout"] }
hyper = "1.10"

# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Robust RFC-4180 CSV reader (Jira "all fields" export — quoted multi-line cells).
csv = "1"

# DB
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
    "macros",
    "migrate",
] }

# Redis
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# Auth / crypto
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"   # HMAC-SHA1 for TOTP (F11) — Google Authenticator ignores the algo param
chacha20poly1305 = "0.10"
hkdf = "0.12"
subtle = "2.6"

# IDs / time
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
thiserror = "1"
anyhow = "1"

# Config
dotenvy = "0.15"
envy = "0.4"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Email (SMTP). rustls, no OpenSSL — matches the rest of the stack.
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "hostname",
] }

# Misc
async-trait = "0.1"
futures = "0.3"
once_cell = "1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = 1
