[package]
name = "sprintly-api"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sprintly-api"
path = "src/main.rs"

[[bin]]
name = "sprintly-seed"
path = "src/bin/seed.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
validator = { workspace = true }
lettre = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# Already a runtime dep; mirrored here so integration tests can drive the
# notification path (which takes a Redis pool).
deadpool-redis = { workspace = true }
